tests/solidity-semantic-tests/out/errors/error_throw_from_module_via_member_access/BContract.clear.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_x9t5h4hc/C.sol.BContract.clear_state_program() -> uint64:
main:
    pushint 1
    return
